Bug 152153 - Embedded images problem in Writer.
Summary: Embedded images problem in Writer.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.6.2 release
Hardware: All All
: medium normal
Assignee: Tünde Tóth
URL:
Whiteboard: target:7.5.0 target:7.4.4
Keywords:
Depends on:
Blocks: DOCX-Images
  Show dependency treegraph
 
Reported: 2022-11-21 09:43 UTC by NISZ LibreOffice Team
Modified: 2022-11-25 15:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Sample file (18.88 KB, application/vnd.oasis.opendocument.text)
2022-11-21 09:44 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem (72.23 KB, image/png)
2022-11-21 09:45 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2022-11-21 09:43:10 UTC
Description:
In Writer, after inserting two images and an embedded document, we then insert a third image. 
We save it in DOCX format and open it again, the second image is the same as the third.


Steps to Reproduce:
1. Create a new document in Writer.
2. Insert two images,an embedded text document, and then another image.
3. Save as DOCX format and reload.


Actual Results:
The second image will match the third.

Expected Results:
The second picture should be the second picture, not the third.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: d687d74a4e3ba70a4e21fcd7db532c3cffc7d4d2
CPU threads: 8; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 NISZ LibreOffice Team 2022-11-21 09:44:53 UTC
Created attachment 183693 [details]
Sample file
Comment 2 NISZ LibreOffice Team 2022-11-21 09:45:38 UTC
Created attachment 183694 [details]
Screenshot of the problem
Comment 3 Commit Notification 2022-11-23 16:49:13 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/55b1d635350cb76ee3e19e90c938eedd38ac3342

tdf#152153 DOCX export: fix lost images at embedded documents

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 NISZ LibreOffice Team 2022-11-25 08:07:44 UTC
Verified in:
Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 24d7431876e87eba700a9f141dc8e030143a92ad
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded
Comment 5 Commit Notification 2022-11-25 11:02:13 UTC
Tünde Tóth committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/6a39bc2668e8f0f8f953ee5f605083eb182db970

tdf#152153 DOCX export: fix lost images at embedded documents

It will be available in 7.4.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Stéphane Guillou (stragu) 2022-11-25 15:55:01 UTC
I could reproduced in:

Version: 7.4.3.2 / LibreOffice Community
Build ID: 1048a8393ae2eeec98dff31b5c133c5f1d08b890
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: de-DE (en_AU.UTF-8); UI: en-US
Calc: threaded

and 

Version: 6.3.6.2
Build ID: 2196df99b074d8a661f4036fca8fa0cbfa33a497
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3; 
Locale: de-DE (en_AU.UTF-8); UI-Language: en-US
Calc: threaded